--- a/MyDockerProject/MyDockerProject/appsettings.json
+++ b/MyDockerProject/MyDockerProject/appsettings.json
@@ -28,6 +28,12 @@
       },
       "Security": {
         "AllowConcurrentLogins": false
+      },
+      "Web": {
+        "Routing": {
+          "TrySkipIisCustomErrors": true
+        },
+        "ReservedPaths": "/hotels"
       }
     }
   },
