--- a/MyDockerProject/docker-compose.yml
+++ b/MyDockerProject/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__umbracoDbDSN=Server=umb_database;Database=umbracoDb;User Id=sa;Password=${DB_PASSWORD};TrustServerCertificate=true;
       - ConnectionStrings__umbracoDbDSN_ProviderName=Microsoft.Data.SqlClient
+      - BOOKING_ENGINE_URL=http://booking_engine:3001
     volumes:
       - umb_media:/app/wwwroot/media
       - umb_scripts:/app/wwwroot/scripts
@@ -38,8 +39,8 @@ services:
       - umb_data:/app/umbraco
       - umb_models:/app/umbraco/models
     build:
-      context: .
-      dockerfile: MyDockerProject/Dockerfile
+      context: ..
+      dockerfile: MyDockerProject/MyDockerProject/Dockerfile
       args:
         - BUILD_CONFIGURATION=Debug
 
@@ -67,24 +68,32 @@ services:
       - "3001:3001"
     environment:
       - PORT=3001
-    networks:
-      - umbnet
-    restart: always
-    depends_on:
-      - umb_database
-
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    ports:
-      - "5173:80"
+      - UMBRACO_API_BASE=http://mydockerproject:8080/api
+      - USE_UMBRACO_ADAPTER=true
     networks:
       - umbnet
     restart: always
     depends_on:
       - mydockerproject
-      - booking_engine
+      - umb_database
+
+  frontend_dev:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5173:5173"
+    volumes:
+      - ../frontend:/app
+      - /app/node_modules
+    working_dir: /app
+    command: npm run dev -- --host 0.0.0.0
+    networks:
+      - umbnet
+    environment:
+      - NODE_ENV=development
+    profiles:
+      - dev
 
 # These volumes are all made as bind mounts, meaning that they are bound to the host machine's file system.
 # This is to better facilitate local development in the IDE, so the views, models, etc... are available in the IDE.
