--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^6.0.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
@@ -21,4 +22,3 @@
     "vite": "^5.0.8"
   }
 }
-
