--- a/MyDockerProject/MyDockerProject/appsettings.json
+++ b/MyDockerProject/MyDockerProject/appsettings.json
@@ -40,5 +40,18 @@
   "ConnectionStrings": {
     "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  },
+  "Email": {
+    "Enabled": false,
+    "SmtpHost": "smtp.example.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "",
+    "SmtpPassword": "",
+    "EnableSsl": true,
+    "FromEmail": "noreply@example.com",
+    "FromName": "Booking System"
+  },
+  "Payment": {
+    "Provider": "Mock"
   }
 }
