--- a/MyDockerProject/MyDockerProject/appsettings.json
+++ b/MyDockerProject/MyDockerProject/appsettings.json
@@ -15,7 +15,8 @@
       "Global": {
         "Id": "189b03e9-f591-48e5-803d-7e731e4beae8",
         "SanitizeTinyMce": true,
-        "BackOfficePath": "/umbraco"
+        "BackOfficePath": "/umbraco",
+        "UmbracoApplicationUrl": "https://hotel.halfagiraf.com/"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
@@ -26,14 +27,14 @@
       "Unattended": {
         "UpgradeUnattended": true
       },
-      "Security": {
-        "AllowConcurrentLogins": false
-      },
       "Web": {
         "Routing": {
           "TrySkipIisCustomErrors": true
         },
         "ReservedPaths": "/hotels"
+      },
+      "Security": {
+        "AllowConcurrentLogins": false
       }
     }
   },
